[gd_scene load_steps=19 format=3 uid="uid://cq5lgla7on08e"]

[ext_resource type="Script" path="res://scripts/tavern_camera.gd" id="1_47vrq"]
[ext_resource type="Script" path="res://scripts/system/api.gd" id="1_b3q28"]
[ext_resource type="PackedScene" uid="uid://c5pvjgy8syrst" path="res://scenes/maps/tavern_tile_map.tscn" id="3_1iydy"]
[ext_resource type="Script" path="res://scripts/tavern_exit.gd" id="3_bljxc"]
[ext_resource type="Script" path="res://scripts/tavern_table.gd" id="5_y146u"]
[ext_resource type="PackedScene" uid="uid://bd8go0qykin0m" path="res://scenes/gameboard.tscn" id="6_hher4"]
[ext_resource type="PackedScene" uid="uid://dtg661hui0ojm" path="res://scenes/player_cards.tscn" id="7_70w3i"]
[ext_resource type="PackedScene" uid="uid://bxoix41d028yc" path="res://scenes/deck.tscn" id="8_p8nab"]
[ext_resource type="Script" path="res://scripts/entities/richard.gd" id="11_5kexj"]
[ext_resource type="Texture2D" uid="uid://ruwooljbkmql" path="res://sprites/Richard.png" id="11_q6deb"]
[ext_resource type="PackedScene" uid="uid://dfijr3iv2qyjv" path="res://scenes/ergebnis_screen.tscn" id="12_by2sr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrnru"]
size = Vector2(280, 201)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rucw"]
bg_color = Color(0.12549, 0.619608, 0.145098, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_l370q"]
atlas = ExtResource("11_q6deb")
region = Rect2(0, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mubf"]
atlas = ExtResource("11_q6deb")
region = Rect2(32, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv53n"]
atlas = ExtResource("11_q6deb")
region = Rect2(64, 336, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tviuj"]
atlas = ExtResource("11_q6deb")
region = Rect2(96, 336, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_x3m1y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l370q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mubf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv53n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tviuj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Taverne" type="Node"]

[node name="ChatAPI" type="Node" parent="."]
script = ExtResource("1_b3q28")

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("1_47vrq")

[node name="TavernTileMap" parent="." instance=ExtResource("3_1iydy")]

[node name="Exit" type="Area2D" parent="."]
script = ExtResource("3_bljxc")

[node name="ExitCollision" type="CollisionShape2D" parent="Exit"]
position = Vector2(257, 603)
shape = SubResource("RectangleShape2D_mrnru")

[node name="Table" type="Area2D" parent="."]
script = ExtResource("5_y146u")

[node name="TableCollision" type="CollisionShape2D" parent="Table"]
position = Vector2(243, 208.5)
shape = SubResource("RectangleShape2D_mrnru")

[node name="TableGame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 136.0
offset_top = 136.0
offset_right = 342.0
offset_bottom = 281.0

[node name="Deck" parent="TableGame" instance=ExtResource("8_p8nab")]
offset_left = -70.0
offset_top = 150.0
offset_right = -30.0
offset_bottom = 190.0

[node name="PlayerCards" parent="TableGame" instance=ExtResource("7_70w3i")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 15.0
offset_right = 430.0
offset_bottom = 55.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)

[node name="PlayCards" type="Control" parent="TableGame"]
anchors_preset = 0
offset_right = 206.0
offset_bottom = 143.0

[node name="GameBoard" parent="TableGame" instance=ExtResource("6_hher4")]
layout_mode = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="PlayCardButton" type="Button" parent="TableGame/GameBoard"]
visible = false
layout_mode = 0
offset_left = 215.0
offset_top = 125.0
offset_right = 1135.0
offset_bottom = 538.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 300
theme_override_styles/normal = SubResource("StyleBoxFlat_0rucw")
text = "PLAY"

[node name="BigCardsOnField" type="Control" parent="TableGame"]
anchors_preset = 0
offset_left = -59.0
offset_top = 19.5
offset_right = -19.0
offset_bottom = 59.5

[node name="EditCards" type="Control" parent="TableGame"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -53.0
offset_right = 79.0
offset_bottom = 53.0
grow_horizontal = 0
grow_vertical = 2

[node name="Richard" type="CharacterBody2D" parent="."]
script = ExtResource("11_5kexj")

[node name="RichardSprite" type="AnimatedSprite2D" parent="Richard"]
position = Vector2(430, 163)
scale = Vector2(1.65625, 1.65625)
sprite_frames = SubResource("SpriteFrames_x3m1y")
animation = &"idle"
frame_progress = 0.901352
speed_scale = 0.5

[node name="PlayerWon" type="Panel" parent="."]
visible = false
offset_left = 93.0
offset_top = 132.0
offset_right = 394.0
offset_bottom = 287.0

[node name="Label" type="Label" parent="PlayerWon"]
layout_mode = 0
offset_right = 6020.0
offset_bottom = 3100.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 800
text = "Player Won!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="PlayerWon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ErgebnisScreen" parent="." instance=ExtResource("12_by2sr")]
visible = false
offset_left = 84.0
offset_top = 116.0
offset_right = 555.0
offset_bottom = 393.0
scale = Vector2(0.675, 0.675)

[connection signal="next_response" from="ChatAPI" to="Table" method="_on_chat_api_next_response"]
[connection signal="body_entered" from="Exit" to="Exit" method="_on_body_entered"]
[connection signal="body_exited" from="Exit" to="Exit" method="_on_body_exited"]
[connection signal="body_entered" from="Table" to="Table" method="_on_body_entered"]
[connection signal="body_exited" from="Table" to="Table" method="_on_body_exited"]
[connection signal="player_prompt" from="Table" to="ChatAPI" method="_on_table_player_prompt"]
[connection signal="table_game_exited" from="Table" to="Camera" method="_on_table_table_game_exited"]
[connection signal="table_game_started" from="Table" to="Camera" method="_on_table_table_game_started"]
[connection signal="pressed" from="TableGame/GameBoard/PlayCardButton" to="Table" method="_on_play_card_button_pressed"]
